estructurasControl/ejercicios/ficheroSalida.txt
Ejercicio2.java:6: error: class, interface, or enum expected
ublic class Ejercicio2 {
^
1 error
